--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -201,7 +201,7 @@
                                         aria-describedby="stepper-item--0-row-title"
                                         data-testid="stepper-item--0-stepper-decrease-button"
                                       >
-                                        <span class="header__search-tabs-filter-body-guests-icon"
+                                        <span class="counter__icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -239,7 +239,7 @@
                                         aria-describedby="stepper-item--0-row-title"
                                         data-testid="stepper-item--0-stepper-increase-button"
                                       >
-                                        <span class="header__search-tabs-filter-body-guests-icon"
+                                        <span class="counter__icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -298,7 +298,7 @@
                                         aria-describedby="stepper-item--1-row-title"
                                         data-testid="stepper-item--1-stepper-decrease-button"
                                       >
-                                        <span class="header__search-tabs-filter-body-guests-icon"
+                                        <span class="counter__icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -336,7 +336,7 @@
                                         aria-describedby="stepper-item--1-row-title"
                                         data-testid="stepper-item--1-stepper-increase-button"
                                       >
-                                        <span class="header__search-tabs-filter-body-guests-icon"
+                                        <span class="counter__icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -395,7 +395,7 @@
                                         aria-describedby="stepper-item--2-row-title"
                                         data-testid="stepper-item--2-stepper-decrease-button"
                                       >
-                                        <span class="header__search-tabs-filter-body-guests-icon"
+                                        <span class="counter__icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -433,7 +433,7 @@
                                         aria-describedby="stepper-item--2-row-title"
                                         data-testid="stepper-item--2-stepper-increase-button"
                                       >
-                                        <span class="header__search-tabs-filter-body-guests-icon"
+                                        <span class="counter__icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -492,7 +492,7 @@
                                         aria-describedby="stepper-item--3-row-title"
                                         data-testid="stepper-item--3-stepper-decrease-button"
                                       >
-                                        <span class="header__search-tabs-filter-body-guests-icon"
+                                        <span class="counter__icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -530,7 +530,7 @@
                                         aria-describedby="stepper-item--3-row-title"
                                         data-testid="stepper-item--3-stepper-increase-button"
                                       >
-                                        <span class="header__search-tabs-filter-body-guests-icon"
+                                        <span class="counter__icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
