--- a/explore-who.html
+++ b/explore-who.html
@@ -271,7 +271,7 @@
                                                           aria-describedby="searchFlow-title-label-stepper-adults"
                                                           data-testid="stepper-adults-decrease-button"
                                                         >
-                                                          <span class="header__search-tabs-filter-body-guests-icon"
+                                                          <span class="counter__icon"
                                                             ><svg
                                                               viewBox="0 0 32 32"
                                                               xmlns="http://www.w3.org/2000/svg"
@@ -311,7 +311,7 @@
                                                           aria-describedby="searchFlow-title-label-stepper-adults"
                                                           data-testid="stepper-adults-increase-button"
                                                         >
-                                                          <span class="header__search-tabs-filter-body-guests-icon"
+                                                          <span class="counter__icon"
                                                             ><svg
                                                               viewBox="0 0 32 32"
                                                               xmlns="http://www.w3.org/2000/svg"
@@ -367,7 +367,7 @@
                                                           aria-describedby="searchFlow-title-label-stepper-children"
                                                           data-testid="stepper-children-decrease-button"
                                                         >
-                                                          <span class="header__search-tabs-filter-body-guests-icon"
+                                                          <span class="counter__icon"
                                                             ><svg
                                                               viewBox="0 0 32 32"
                                                               xmlns="http://www.w3.org/2000/svg"
@@ -407,7 +407,7 @@
                                                           aria-describedby="searchFlow-title-label-stepper-children"
                                                           data-testid="stepper-children-increase-button"
                                                         >
-                                                          <span class="header__search-tabs-filter-body-guests-icon"
+                                                          <span class="counter__icon"
                                                             ><svg
                                                               viewBox="0 0 32 32"
                                                               xmlns="http://www.w3.org/2000/svg"
@@ -463,7 +463,7 @@
                                                           aria-describedby="searchFlow-title-label-stepper-infants"
                                                           data-testid="stepper-infants-decrease-button"
                                                         >
-                                                          <span class="header__search-tabs-filter-body-guests-icon"
+                                                          <span class="counter__icon"
                                                             ><svg
                                                               viewBox="0 0 32 32"
                                                               xmlns="http://www.w3.org/2000/svg"
@@ -503,7 +503,7 @@
                                                           aria-describedby="searchFlow-title-label-stepper-infants"
                                                           data-testid="stepper-infants-increase-button"
                                                         >
-                                                          <span class="header__search-tabs-filter-body-guests-icon"
+                                                          <span class="counter__icon"
                                                             ><svg
                                                               viewBox="0 0 32 32"
                                                               xmlns="http://www.w3.org/2000/svg"
@@ -565,7 +565,7 @@
                                                           aria-describedby="searchFlow-title-label-stepper-pets"
                                                           data-testid="stepper-pets-decrease-button"
                                                         >
-                                                          <span class="header__search-tabs-filter-body-guests-icon"
+                                                          <span class="counter__icon"
                                                             ><svg
                                                               viewBox="0 0 32 32"
                                                               xmlns="http://www.w3.org/2000/svg"
@@ -605,7 +605,7 @@
                                                           aria-describedby="searchFlow-title-label-stepper-pets"
                                                           data-testid="stepper-pets-increase-button"
                                                         >
-                                                          <span class="header__search-tabs-filter-body-guests-icon"
+                                                          <span class="counter__icon"
                                                             ><svg
                                                               viewBox="0 0 32 32"
                                                               xmlns="http://www.w3.org/2000/svg"
