--- a/merchandising.html
+++ b/merchandising.html
@@ -5927,7 +5927,7 @@
                                                                               data-testid="stepper-adults-decrease-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -5971,7 +5971,7 @@
                                                                               data-testid="stepper-adults-increase-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6033,7 +6033,7 @@
                                                                               data-testid="stepper-children-decrease-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6077,7 +6077,7 @@
                                                                               data-testid="stepper-children-increase-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6139,7 +6139,7 @@
                                                                               data-testid="stepper-infants-decrease-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6183,7 +6183,7 @@
                                                                               data-testid="stepper-infants-increase-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6252,7 +6252,7 @@
                                                                               data-testid="stepper-pets-decrease-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6296,7 +6296,7 @@
                                                                               data-testid="stepper-pets-increase-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -16264,7 +16264,7 @@
                                                                               data-testid="stepper-adults-decrease-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -16308,7 +16308,7 @@
                                                                               data-testid="stepper-adults-increase-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -16370,7 +16370,7 @@
                                                                               data-testid="stepper-children-decrease-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -16414,7 +16414,7 @@
                                                                               data-testid="stepper-children-increase-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -16476,7 +16476,7 @@
                                                                               data-testid="stepper-infants-decrease-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -16520,7 +16520,7 @@
                                                                               data-testid="stepper-infants-increase-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -16589,7 +16589,7 @@
                                                                               data-testid="stepper-pets-decrease-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -16633,7 +16633,7 @@
                                                                               data-testid="stepper-pets-increase-button"
                                                                             >
                                                                               <span
-                                                                                class="header__search-tabs-filter-body-guests-icon"
+                                                                                class="counter__icon"
                                                                                 ><svg
                                                                                   viewBox="0 0 32 32"
                                                                                   xmlns="http://www.w3.org/2000/svg"
