--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -458,9 +458,9 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                       <span class="text-highlight dir dir-ltr"
                         >Your progress: step 8 out of 10.</span
                       >
-                      <div class="become-a-host__footer-progress">
+                      <div class="progress-bar-bottom-alt">
                         <div
-                          class="become-a-host__footer-progress-bar"
+                          class="progress-bar-bottom-alt__bar"
                           style="
                             transition: transform 0.6s;
                             transform: translateX(73%);
