--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -1177,9 +1177,9 @@
                       <span class="text-highlight dir dir-ltr"
                         >Your progress: step 6 out of 10.</span
                       >
-                      <div class="become-a-host__footer-progress">
+                      <div class="progress-bar-bottom-alt">
                         <div
-                          class="become-a-host__footer-progress-bar"
+                          class="progress-bar-bottom-alt__bar"
                           style="
                             transition: transform 0.6s;
                             transform: translateX(55%);
