--- a/become-a-host/amenities.html
+++ b/become-a-host/amenities.html
@@ -13189,9 +13189,9 @@
                       <span class="text-highlight dir dir-ltr"
                         >Your progress: step 5 out of 10.</span
                       >
-                      <div class="become-a-host__footer-progress">
+                      <div class="progress-bar-bottom-alt">
                         <div
-                          class="become-a-host__footer-progress-bar"
+                          class="progress-bar-bottom-alt__bar"
                           style="
                             transition: transform 0.6s ease 0s;
                             transform: translateX(45%);
