--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -569,9 +569,9 @@
                       <span class="text-highlight dir dir-ltr"
                         >Your progress: step 4 out of 10.</span
                       >
-                      <div class="become-a-host__footer-progress">
+                      <div class="progress-bar-bottom-alt">
                         <div
-                          class="become-a-host__footer-progress-bar"
+                          class="progress-bar-bottom-alt__bar"
                           style="
                             transition: transform 0.6s;
                             transform: translateX(36%);
