--- a/become-a-host/privacy-type.html
+++ b/become-a-host/privacy-type.html
@@ -224,9 +224,9 @@
                       <span class="text-highlight dir dir-ltr"
                         >Your progress: step 2 out of 10.</span
                       >
-                      <div class="become-a-host__footer-progress">
+                      <div class="progress-bar-bottom-alt">
                         <div
-                          class="become-a-host__footer-progress-bar"
+                          class="progress-bar-bottom-alt__bar"
                           style="
                             transition: transform 0.6s;
                             transform: translateX(18%);
